--- a/custom.styl
+++ b/custom.styl
@@ -1,5 +1,10 @@
 @import 'bower_components/nib'
 
+@font-face {
+    font-family: Nexa Rust Sans;
+    src: url(font/NexaRustSans-Black.otf);
+}
+
 #menu
 	position fixed
 	top 0
