--- a/css/custom.styl
+++ b/css/custom.styl
@@ -118,7 +118,7 @@ select
 	height: 45px;
 	
 .bordino-mail
-	border 1px solid white
+	border 5px solid rgba(255,255,255,0.5)
 	padding 0 20px 20px 20px
 	border-radius 10px
 	width: 500px;
