--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Nexa Rust Sans;
-  src: url("../font/NexaRustSans-Black.otf");
+  src: url("font/NexaRustSans-Black.otf");
 }
 #menu {
   position: fixed;
@@ -25,7 +25,7 @@ h2 {
 }
 #hero {
   height: 700px;
-  background: url("../img/ship2.jpg");
+  background: url("img/ship2.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -81,7 +81,7 @@ li {
   margin-top: 0.7em;
 }
 .pattern {
-  background: url("../img/pattern.png");
+  background: url("img/pattern.png");
   background-repeat: repeat;
   opacity: 0.2;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
@@ -130,7 +130,7 @@ select {
   height: 45px;
 }
 .bordino-mail {
-  border: 1px solid #fff;
+  border: 5px solid rgba(255,255,255,0.5);
   padding: 0 20px 20px 20px;
   -webkit-border-radius: 10px;
   border-radius: 10px;
