stylus fixed with new directory

--- a/css/custom.styl
+++ b/css/custom.styl
@@ -2,7 +2,7 @@
 
 @font-face {
     font-family: Nexa Rust Sans;
-    src: url(font/NexaRustSans-Black.otf);
+    src: url(../font/NexaRustSans-Black.otf);
 }
 
 #menu
@@ -27,7 +27,7 @@ h2
 //custom
 #hero
 	height 700px
-	background url(img/ship2.jpg)
+	background url(../img/ship2.jpg)
 	background-size cover
 	background-position center
 	margin 0
@@ -74,7 +74,7 @@ ul, li
 	margin-top .7em
 
 .pattern
-	background url(img/pattern.png)
+	background url(../img/pattern.png)
 	background-repeat repeat
 	opacity .2
 	height 100%
