--- a/css/custom.styl
+++ b/css/custom.styl
@@ -131,5 +131,14 @@ select
 		border-radius 0
 		width: auto
 		margin: auto;
-	#hero h1
-		font-size 38px
+	
+	#hero 
+		h1
+			font-size 38px
+		h3
+			font-size 28px
+		h1,h3
+			padding-left 10px
+	
+	#hero .container #mc_embed_signup
+		padding-left 10px
