--- a/custom.css
+++ b/custom.css
@@ -1,7 +1,3 @@
-@font-face {
-  font-family: Nexa Rust Sans;
-  src: url("font/NexaRustSans-Black.otf");
-}
 #menu {
   position: fixed;
   top: 0;
@@ -9,28 +5,57 @@
   background: rgba(255,255,255,0.5);
 }
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 300;
+  font-size: 18px;
 }
 body label {
   font-weight: 300;
 }
 h1,
+h2 {
+  font-family: 'Pathway Gothic One', sans-serif;
+}
+h1,
 .sei-pronto {
-  font-family: 'Nexa Rust Sans';
+  letter-spacing: 0.03em;
 }
 h2 {
   font-size: 33px;
   font-weight: bold;
 }
 #hero {
+  text-shadow: 0 1px 1px rgba(0,0,0,0.7);
   height: 700px;
-  background: url("img/ship2.jpg");
+  background: url("img/ship.jpeg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   background-position: center;
   margin: 0;
+}
+#hero .logo {
+  margin-top: 1em;
+  position: relative;
+  top: 0;
+  z-index: 255;
+}
+#hero .hero-background {
+  background: -webkit-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
+  background: -moz-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
+  background: -o-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
+  background: -ms-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
+  background: linear-gradient(to bottom, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
+  position: absolute;
+  width: 100%;
+  height: 700px;
+  z-index: 1;
+  top: 0;
+}
+#hero .container {
+  position: relative;
+  z-index: 256;
+  text-align: center;
 }
 #hero h1,
 #hero h3 {
@@ -38,14 +63,26 @@ h2 {
   font-weight: 300;
 }
 #hero h1 {
-  margin: 0;
-  padding: 1em 0 0 40px;
+  margin: 0 auto;
+  padding: 0.3em 0 0 0px;
   text-transform: uppercase;
   font-weight: 800;
   font-size: 50px;
 }
 #hero h3 {
-  padding-left: 40px;
+  line-height: 1.3em;
+  padding-left: 0px;
+  margin-top: 1.2em;
+  margin-bottom: 0.5em;
+}
+#hero label {
+  margin-top: 0.6em;
+  margin-bottom: 0.4em;
+}
+#hero h3,
+#hero label {
+  font-size: 20px;
+  letter-spacing: 1px;
 }
 ul,
 li {
@@ -53,36 +90,36 @@ li {
   padding: 0;
 }
 #users {
-  background: #283583;
-  color: #fff;
+  background: #fff;
+  color: #0a71b4;
   position: relative;
   padding: 2em 0;
 }
 #hero .container #mc_embed_signup {
-  padding-left: 40px;
+  padding-left: padding-hero;
 }
 .mc-field-group {
   float: left;
 }
 .mc-field-group label {
-  margin-top: 1em;
+  margin-top: 0.3em;
 }
 .mc-field-group input {
+  padding: 10px 7px;
   height: 45px;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   border: 0;
-  width: 280px;
-  padding: 5px;
+  width: 400px;
+  border: 2px solid #d8d8d8;
+  background: #fff;
 }
 .btn-mailchimp {
   color: #fff;
-  background: #ffa500;
-  margin-top: 0.7em;
+  background: #fab647;
+  margin-top: 1em;
 }
 .pattern {
-  background: url("img/pattern.png");
-  background-repeat: repeat;
   opacity: 0.2;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
   filter: alpha(opacity=20);
@@ -94,7 +131,7 @@ li {
 }
 .bottom-call {
   color: #fff;
-  background: #171f51;
+  background: #6fabd0;
   padding: 2em;
   position: relative;
 }
@@ -110,16 +147,16 @@ li {
   color: #000;
 }
 .description-icon {
-  background: rgba(255,255,255,0.8);
+  background: rgba(10,113,180,0.8);
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  height: 60px;
-  width: 60px;
-  padding: 10px;
+  height: 124px;
+  width: 136px !important;
+  padding: 0;
 }
 select {
   color: #000;
-  width: 280px;
+  width: 400px;
   padding: 5px;
   font-size: 16px;
   line-height: 1;
@@ -136,6 +173,12 @@ select {
   border-radius: 10px;
   width: 500px;
   margin: 0 auto;
+}
+footer {
+  display: inline-block;
+  width: 100%;
+  background: #0a71b4;
+  color: #fff;
 }
 @media screen and (max-width: 610px) {
   .bordino-mail {
