--- a/custom.styl
+++ b/custom.styl
@@ -30,7 +30,7 @@ h2
 #hero
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
 	height 700px
-	background url(img/ship.jpeg)
+	background url(http://38.media.tumblr.com/7faa2e6ae724dc3ec38785c4b2b469d4/tumblr_njvrqeIcVC1s32l6vo1_500.gif)
 	background-size cover
 	background-position center
 	margin 0
