--- a/custom.styl
+++ b/custom.styl
@@ -30,7 +30,11 @@ h2
 #hero
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
 	height 700px
-	background url(http://38.media.tumblr.com/7faa2e6ae724dc3ec38785c4b2b469d4/tumblr_njvrqeIcVC1s32l6vo1_500.gif)
+	//background url(http://38.media.tumblr.com/7faa2e6ae724dc3ec38785c4b2b469d4/tumblr_njvrqeIcVC1s32l6vo1_500.gif)
+	//background url(https://38.media.tumblr.com/02444a08baf94eb7f752a52fb9a60131/tumblr_mysu1a0SGx1qc66bjo1_500.gif)
+	//background url(https://31.media.tumblr.com/b7239bc335ddf2ea615949d5beb92df8/tumblr_n8zzzoL4j31ssjkcoo1_400.gif)
+	background url(https://31.media.tumblr.com/20398da5be4aaa70a3f580d5b3d137b1/tumblr_myw1v9mksP1sczkxxo1_500.gif)
+	background url(https://31.media.tumblr.com/891ef82199f28ffa58b213dd0e8e388b/tumblr_mpxrlto3sE1r1546xo1_500.gif)
 	background-size cover
 	background-position center
 	margin 0
