--- a/css/custom.styl
+++ b/css/custom.styl
@@ -1,9 +1,10 @@
-@import '../bower_components/nib'
+blue = #0A71B4
+light-blue = #6FABD0
+orange = #FAB647
 
-@font-face {
-    font-family: Nexa Rust Sans;
-    src: url(../font/NexaRustSans-Black.otf);
-}
+form-width = 400px
+
+@import 'bower_components/nib'
 
 #menu
 	position fixed
@@ -12,13 +13,14 @@
 	background rgba(256,256,256,.5)
 
 body
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Raleway', sans-serif;
 	font-weight 300
+	font-size 18px
 	label
 		font-weight 300
 
-h1, .sei-pronto
-	font-family 'Nexa Rust Sans'
+h1,h2
+	font-family 'Pathway Gothic One', sans-serif;
 	
 h2
 	font-size 33px
@@ -26,56 +28,89 @@ h2
 
 //custom
 #hero
+	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
 	height 700px
-	background url(../img/ship2.jpg)
+	// background url(http://38.media.tumblr.com/7faa2e6ae724dc3ec38785c4b2b469d4/tumblr_njvrqeIcVC1s32l6vo1_500.gif)
+	// background url(https://38.media.tumblr.com/02444a08baf94eb7f752a52fb9a60131/tumblr_mysu1a0SGx1qc66bjo1_500.gif)
+	// background url(https://31.media.tumblr.com/b7239bc335ddf2ea615949d5beb92df8/tumblr_n8zzzoL4j31ssjkcoo1_400.gif)
+	// background url(https://31.media.tumblr.com/20398da5be4aaa70a3f580d5b3d137b1/tumblr_myw1v9mksP1sczkxxo1_500.gif)
+	background url(https://31.media.tumblr.com/891ef82199f28ffa58b213dd0e8e388b/tumblr_mpxrlto3sE1r1546xo1_500.gif)
 	background-size cover
 	background-position center
 	margin 0
-	padding-hero = 40px
+	padding-hero = 0px
+	.logo
+		margin-top 1em
+		position relative
+		top 0
+		z-index 255
+	.hero-background
+		// background rgba(blue,0.8)
+		background linear-gradient(to bottom, rgba(125,185,232,0) 0%,rgba(48,137,197,0.8) 67%,rgba(10,113,180,0.8) 100%)
+		position absolute
+		width 100%
+		height 700px
+		z-index 1
+		top 0
+	.container
+		position relative
+		z-index 256
+		text-align center
 	h1, h3
 		color white
 		font-weight 300
 	h1
-		margin 0 
-		padding 1em 0 0 padding-hero
+		margin 0 auto
+		padding .3em 0 0 padding-hero
 		text-transform uppercase
 		font-weight 800
 		font-size 50px
 	h3
+		line-height: 1.3em;
 		padding-left padding-hero
+		margin-top 1.2em
+		margin-bottom .5em
+	label
+		margin-top .6em
+		margin-bottom .4em
+	h3, label
+		font-size 20px
+		letter-spacing 1px
 
 ul, li
 	list-style-type none
 	padding 0
 	
 #users
-	background #283583
-	color white
+	background white
+	color blue
 	position relative
 	padding 2em 0
 
 #hero .container #mc_embed_signup
-	padding-left: 40px;
+	padding-left: padding-hero;
 
 .mc-field-group
 	float left
 	label
-		margin-top: 1em;
+		margin-top: .3em;
 	input
-		height: 45px;
-		border-radius: 5px;
-		border: 0;
-		width 280px
-		padding 5px;
+		padding 10px 7px
+		height 45px
+		border-radius: 5px
+		border 0
+		width form-width
+		border 2px solid #d8d8d8
+		background white
 
 .btn-mailchimp
 	color white
 	background orange
-	margin-top .7em
+	margin-top 1em
+	&:hover
+		color blue
 
 .pattern
-	background url(../img/pattern.png)
-	background-repeat repeat
 	opacity .2
 	height 100%
 	width 100%
@@ -85,7 +120,7 @@ ul, li
 	
 .bottom-call
 	color white
-	background: #171F51
+	background: light-blue
 	padding 2em
 	position relative
 	
@@ -100,11 +135,15 @@ ul, li
 		color black
 
 .description-icon
-	height 90px
+	background rgba(blue,0.8)
+	border-radius 50%
+	height 124px
+	width 136px !important
+	padding 0
 
 select
 	color: black;
-	width: 280px;
+	width: form-width;
 	padding: 5px;
 	font-size: 16px;
 	line-height: 1;
@@ -114,12 +153,18 @@ select
 	height: 45px;
 	
 .bordino-mail
-	border 5px solid rgba(255,255,255,0.5)
+	border 1px solid white
 	padding 0 20px 20px 20px
 	border-radius 10px
 	width: 500px;
 	margin: 0 auto;
 	
+footer
+	display inline-block
+	width 100%
+	background blue
+	color white
+
 @media screen and (max-width: 610px)
 	.bordino-mail
 		border none
@@ -127,17 +172,3 @@ select
 		border-radius 0
 		width: auto
 		margin: auto;
-	
-	#hero 
-		h1
-			font-size 38px
-		h3
-			font-size 28px
-		h1,h3
-			padding-left 10px
-	
-	.bottom-call
-		padding 0
-	
-	#hero .container #mc_embed_signup
-		padding-left 10px
