--- a/css/custom.styl
+++ b/css/custom.styl
@@ -30,20 +30,24 @@ h2
 #hero
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
 	height 700px
-	// background url(http://38.media.tumblr.com/7faa2e6ae724dc3ec38785c4b2b469d4/tumblr_njvrqeIcVC1s32l6vo1_500.gif)
-	// background url(https://38.media.tumblr.com/02444a08baf94eb7f752a52fb9a60131/tumblr_mysu1a0SGx1qc66bjo1_500.gif)
-	// background url(https://31.media.tumblr.com/b7239bc335ddf2ea615949d5beb92df8/tumblr_n8zzzoL4j31ssjkcoo1_400.gif)
-	// background url(https://31.media.tumblr.com/20398da5be4aaa70a3f580d5b3d137b1/tumblr_myw1v9mksP1sczkxxo1_500.gif)
-	background url(https://31.media.tumblr.com/891ef82199f28ffa58b213dd0e8e388b/tumblr_mpxrlto3sE1r1546xo1_500.gif)
+	// background url(http://38.media.tumblr.com/7faa2e6ae724dc3ec38785c4b2b469d4/tumblr_njvrqeIcVC1s32l6vo1_500.gif) // yeah
+	// background url(https://38.media.tumblr.com/02444a08baf94eb7f752a52fb9a60131/tumblr_mysu1a0SGx1qc66bjo1_500.gif) // water
+	// background url(https://31.media.tumblr.com/b7239bc335ddf2ea615949d5beb92df8/tumblr_n8zzzoL4j31ssjkcoo1_400.gif) // onboard bow
+	// background url(https://31.media.tumblr.com/20398da5be4aaa70a3f580d5b3d137b1/tumblr_myw1v9mksP1sczkxxo1_500.gif) // onboard left
+	// background url(https://31.media.tumblr.com/891ef82199f28ffa58b213dd0e8e388b/tumblr_mpxrlto3sE1r1546xo1_500.gif) // swain
+	// background url(http://media.giphy.com/media/jgoXPdVIluKM8/giphy.gif) // arr... ses
+	background url(http://media.giphy.com/media/XuwTEJcwuMYxO/giphy.gif) // relax
+	// background url(https://mail-attachment.googleusercontent.com/attachment/u/0/?ui=2&ik=dd37be170e&attid=0.6&th=14c1429d855d620b&view=att&disp=inline&realattid=f_i77ugvm85&zw&saduie=AG9B_P_VsNaTshW1Hj9CiDsu1dgt&sadet=1426628200753&sadat=ANGjdJ_OfAwpXptUDxTDl7RbjapdlOBnL54r-uc3ruKpRKupCdJFJlgqMObC5FI&sads=rIVE-aGEh7QKav1PtMpmX4H-q8U)
 	background-size cover
 	background-position center
 	margin 0
 	padding-hero = 0px
 	.logo
-		margin-top 1em
+		margin-top 5em
 		position relative
 		top 0
 		z-index 255
+		width 600px
 	.hero-background
 		// background rgba(blue,0.8)
 		background linear-gradient(to bottom, rgba(125,185,232,0) 0%,rgba(48,137,197,0.8) 67%,rgba(10,113,180,0.8) 100%)
@@ -137,9 +141,9 @@ ul, li
 .description-icon
 	background rgba(blue,0.8)
 	border-radius 50%
-	height 124px
+	height 132px
 	width 136px !important
-	padding 0
+	padding 10px
 
 select
 	color: black;
