navbar e socials sul footer

--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,10 @@ h2 {
   font-size: 33px;
   font-weight: bold;
 }
+nav {
+  margin-top: 1em;
+  text-align: left;
+}
 #hero {
   text-shadow: 0 1px 1px rgba(0,0,0,0.7);
   height: 700px;
@@ -179,6 +183,15 @@ footer {
   width: 100%;
   background: #0a71b4;
   color: #fff;
+}
+footer .icons {
+  font-size: 30px;
+}
+footer .icons a {
+  color: #fff;
+}
+footer .icons a:focus {
+  outline: none;
 }
 @media screen and (max-width: 610px) {
   .bordino-mail {
