--- a/css/custom.styl
+++ b/css/custom.styl
@@ -26,6 +26,10 @@ h2
 	font-size 33px
 	font-weight bold
 
+nav
+	margin-top 1em
+	text-align left
+
 //custom
 #hero
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
@@ -167,7 +171,13 @@ footer
 	display inline-block
 	width 100%
 	background blue
-	color white
+	color white	
+	.icons
+		font-size 30px
+		a
+			color white
+			&:focus
+				outline none
 
 @media screen and (max-width: 610px)
 	.bordino-mail
