icone resize e logo arancione a sorpresa

--- a/css/custom.styl
+++ b/css/custom.styl
@@ -148,6 +148,11 @@ ul, li
 	height 132px
 	width 136px !important
 	padding 10px
+	display inline-block
+	line-height 104px
+	img
+		width 100%
+		display inline-block
 
 select
 	color: black;
