--- a/css/custom.css
+++ b/css/custom.css
@@ -157,6 +157,12 @@ li {
   height: 132px;
   width: 136px !important;
   padding: 10px;
+  display: inline-block;
+  line-height: 104px;
+}
+.description-icon img {
+  width: 100%;
+  display: inline-block;
 }
 select {
   color: #000;
