--- a/css/custom.styl
+++ b/css/custom.styl
@@ -191,3 +191,12 @@ footer
 		border-radius 0
 		width: auto
 		margin: auto;
+	
+	#hero
+		.logo
+			width 80%
+		h1
+			font-size 40px
+	#hero, .mc-field-group	
+		input, select
+			width 100%
