--- a/css/custom.styl
+++ b/css/custom.styl
@@ -32,8 +32,9 @@ nav
 
 //custom
 #hero
+	hero-height = 750px
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
-	height 700px
+	height hero-height
 	// background url(http://38.media.tumblr.com/7faa2e6ae724dc3ec38785c4b2b469d4/tumblr_njvrqeIcVC1s32l6vo1_500.gif) // yeah
 	// background url(https://38.media.tumblr.com/02444a08baf94eb7f752a52fb9a60131/tumblr_mysu1a0SGx1qc66bjo1_500.gif) // water
 	// background url(https://31.media.tumblr.com/b7239bc335ddf2ea615949d5beb92df8/tumblr_n8zzzoL4j31ssjkcoo1_400.gif) // onboard bow
@@ -57,7 +58,7 @@ nav
 		background linear-gradient(to bottom, rgba(125,185,232,0) 0%,rgba(48,137,197,0.8) 67%,rgba(10,113,180,0.8) 100%)
 		position absolute
 		width 100%
-		height 700px
+		height hero-height
 		z-index 1
 		top 0
 	.container
