--- a/css/custom.css
+++ b/css/custom.css
@@ -39,7 +39,7 @@ nav {
   position: relative;
   top: 0;
   z-index: 255;
-  width: 600px;
+  width: 500px;
 }
 #hero .hero-background {
   background: -webkit-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
@@ -59,6 +59,7 @@ nav {
   text-align: center;
 }
 #hero h1,
+#hero h2,
 #hero h3 {
   color: #fff;
   font-weight: 300;
@@ -66,8 +67,6 @@ nav {
 #hero h1 {
   margin: 0 auto;
   padding: 0.3em 0 0 0px;
-  text-transform: uppercase;
-  font-weight: 800;
   font-size: 50px;
 }
 #hero h3 {
