--- a/css/custom.styl
+++ b/css/custom.styl
@@ -52,7 +52,7 @@ nav
 		position relative
 		top 0
 		z-index 255
-		width 600px
+		width 500px
 	.hero-background
 		// background rgba(blue,0.8)
 		background linear-gradient(to bottom, rgba(125,185,232,0) 0%,rgba(48,137,197,0.8) 67%,rgba(10,113,180,0.8) 100%)
@@ -65,14 +65,14 @@ nav
 		position relative
 		z-index 256
 		text-align center
-	h1, h3
+	h1, h2, h3
 		color white
 		font-weight 300
 	h1
 		margin 0 auto
 		padding .3em 0 0 padding-hero
-		text-transform uppercase
-		font-weight 800
+		// text-transform uppercase
+		// font-weight 800
 		font-size 50px
 	h3
 		line-height: 1.3em;
