--- a/css/custom.styl
+++ b/css/custom.styl
@@ -143,7 +143,7 @@ ul, li
 	input
 		color black
 
-.description-icon
+.description-icon-host
 	background rgba(blue,0.8)
 	border-radius 50%
 	height 132px
@@ -152,9 +152,21 @@ ul, li
 	display inline-block
 	line-height 104px
 	img
-		width 100%
+		width 45%
 		display inline-block
 
+.description-icon-guest
+	background rgba(orange,0.8)
+	border-radius 50%
+	height 132px
+	width 136px !important
+	padding 10px
+	display inline-block
+	line-height 104px
+	img
+		width 45%
+		display inline-block
+		
 select
 	color: black;
 	width: form-width;
