circle logos added. better navbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -35,7 +35,6 @@ nav {
   margin: 0;
 }
 #hero .logo {
-  margin-top: 5em;
   position: relative;
   top: 0;
   z-index: 255;
@@ -149,32 +148,8 @@ li {
 .mc-field-group input {
   color: #000;
 }
-.description-icon-host {
-  background: rgba(10,113,180,0.8);
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  height: 132px;
-  width: 136px !important;
-  padding: 10px;
-  display: inline-block;
-  line-height: 104px;
-}
-.description-icon-host img {
-  width: 45%;
-  display: inline-block;
-}
-.description-icon-guest {
-  background: rgba(250,182,71,0.8);
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  height: 132px;
-  width: 136px !important;
-  padding: 10px;
-  display: inline-block;
-  line-height: 104px;
-}
-.description-icon-guest img {
-  width: 45%;
+.description-icon img {
+  width: 25%;
   display: inline-block;
 }
 select {
