--- a/css/custom.styl
+++ b/css/custom.styl
@@ -48,7 +48,7 @@ nav
 	margin 0
 	padding-hero = 0px
 	.logo
-		margin-top 5em
+		// margin-top 1em
 		position relative
 		top 0
 		z-index 255
@@ -143,29 +143,22 @@ ul, li
 	input
 		color black
 
-.description-icon-host
-	background rgba(blue,0.8)
-	border-radius 50%
-	height 132px
-	width 136px !important
-	padding 10px
-	display inline-block
-	line-height 104px
+.description-icon
 	img
-		width 45%
+		width 25%
 		display inline-block
 
-.description-icon-guest
-	background rgba(orange,0.8)
-	border-radius 50%
-	height 132px
-	width 136px !important
-	padding 10px
-	display inline-block
-	line-height 104px
-	img
-		width 45%
-		display inline-block
+// .description-icon-guest
+// 	background rgba(orange,0.8)
+// 	border-radius 50%
+// 	height 136px
+// 	width 136px !important
+// 	padding 10px
+// 	display inline-block
+// 	line-height 104px
+// 	img
+// 		width 45%
+// 		display inline-block
 		
 select
 	color: black;
