--- a/css/custom.styl
+++ b/css/custom.styl
@@ -1,6 +1,7 @@
 blue = #0A71B4
 light-blue = #6FABD0
 orange = #FAB647
+bg-hero-pic = "../img/bg-hero.jpg"
 
 form-width = 400px
 
@@ -41,8 +42,9 @@ nav
 	// background url(https://31.media.tumblr.com/20398da5be4aaa70a3f580d5b3d137b1/tumblr_myw1v9mksP1sczkxxo1_500.gif) // onboard left
 	// background url(https://31.media.tumblr.com/891ef82199f28ffa58b213dd0e8e388b/tumblr_mpxrlto3sE1r1546xo1_500.gif) // swain
 	// background url(http://media.giphy.com/media/jgoXPdVIluKM8/giphy.gif) // arr... ses
-	background url(http://media.giphy.com/media/XuwTEJcwuMYxO/giphy.gif) // relax
+	// background url(http://media.giphy.com/media/XuwTEJcwuMYxO/giphy.gif) // relax
 	// background url(https://mail-attachment.googleusercontent.com/attachment/u/0/?ui=2&ik=dd37be170e&attid=0.6&th=14c1429d855d620b&view=att&disp=inline&realattid=f_i77ugvm85&zw&saduie=AG9B_P_VsNaTshW1Hj9CiDsu1dgt&sadet=1426628200753&sadat=ANGjdJ_OfAwpXptUDxTDl7RbjapdlOBnL54r-uc3ruKpRKupCdJFJlgqMObC5FI&sads=rIVE-aGEh7QKav1PtMpmX4H-q8U)
+	background url(bg-hero-pic)		
 	background-size cover
 	background-position center
 	margin 0
@@ -55,7 +57,7 @@ nav
 		width 500px
 	.hero-background
 		// background rgba(blue,0.8)
-		background linear-gradient(to bottom, rgba(125,185,232,0) 0%,rgba(48,137,197,0.8) 67%,rgba(10,113,180,0.8) 100%)
+		background linear-gradient(to bottom, rgba(125,185,232,0) 50%,rgba(48,137,197,0.8) 75%,rgba(10,113,180,0.8) 100%)
 		position absolute
 		width 100%
 		height hero-height
