--- a/css/custom.css
+++ b/css/custom.css
@@ -27,7 +27,7 @@ nav {
 #hero {
   text-shadow: 0 1px 1px rgba(0,0,0,0.7);
   height: 750px;
-  background: url("http://media.giphy.com/media/XuwTEJcwuMYxO/giphy.gif");
+  background: url("../img/bg-hero.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -41,11 +41,11 @@ nav {
   width: 500px;
 }
 #hero .hero-background {
-  background: -webkit-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
-  background: -moz-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
-  background: -o-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
-  background: -ms-linear-gradient(top, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
-  background: linear-gradient(to bottom, rgba(125,185,232,0) 0%, rgba(48,137,197,0.8) 67%, rgba(10,113,180,0.8) 100%);
+  background: -webkit-linear-gradient(top, rgba(125,185,232,0) 50%, rgba(48,137,197,0.8) 75%, rgba(10,113,180,0.8) 100%);
+  background: -moz-linear-gradient(top, rgba(125,185,232,0) 50%, rgba(48,137,197,0.8) 75%, rgba(10,113,180,0.8) 100%);
+  background: -o-linear-gradient(top, rgba(125,185,232,0) 50%, rgba(48,137,197,0.8) 75%, rgba(10,113,180,0.8) 100%);
+  background: -ms-linear-gradient(top, rgba(125,185,232,0) 50%, rgba(48,137,197,0.8) 75%, rgba(10,113,180,0.8) 100%);
+  background: linear-gradient(to bottom, rgba(125,185,232,0) 50%, rgba(48,137,197,0.8) 75%, rgba(10,113,180,0.8) 100%);
   position: absolute;
   width: 100%;
   height: 750px;
