--- a/css/custom.css
+++ b/css/custom.css
@@ -27,7 +27,7 @@ nav {
 #hero {
   text-shadow: 0 1px 1px rgba(0,0,0,0.7);
   height: 750px;
-  background: url("http://media.giphy.com/media/XuwTEJcwuMYxO/giphy.gif");
+  background: url("../img/sfondi/1.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
