--- a/css/custom.styl
+++ b/css/custom.styl
@@ -41,7 +41,7 @@ nav
 	// background url(https://31.media.tumblr.com/20398da5be4aaa70a3f580d5b3d137b1/tumblr_myw1v9mksP1sczkxxo1_500.gif) // onboard left
 	// background url(https://31.media.tumblr.com/891ef82199f28ffa58b213dd0e8e388b/tumblr_mpxrlto3sE1r1546xo1_500.gif) // swain
 	// background url(http://media.giphy.com/media/jgoXPdVIluKM8/giphy.gif) // arr... ses
-	background url(http://media.giphy.com/media/XuwTEJcwuMYxO/giphy.gif) // relax
+	background url('../img/sfondi/1.jpg')
 	// background url(https://mail-attachment.googleusercontent.com/attachment/u/0/?ui=2&ik=dd37be170e&attid=0.6&th=14c1429d855d620b&view=att&disp=inline&realattid=f_i77ugvm85&zw&saduie=AG9B_P_VsNaTshW1Hj9CiDsu1dgt&sadet=1426628200753&sadat=ANGjdJ_OfAwpXptUDxTDl7RbjapdlOBnL54r-uc3ruKpRKupCdJFJlgqMObC5FI&sads=rIVE-aGEh7QKav1PtMpmX4H-q8U)
 	background-size cover
 	background-position center
