--- a/css/custom.styl
+++ b/css/custom.styl
@@ -58,7 +58,7 @@ nav
 		z-index 255
 		width 500px
 	.hero-background
-		// background rgba(blue,0.8)
+		background rgba(blue,0.4)
 		//background linear-gradient(to bottom, rgba(125,185,232,0) 50%,rgba(48,137,197,0.8) 75%,rgba(10,113,180,0.8) 100%)
 		position absolute
 		width 100%
