--- a/css/custom.css
+++ b/css/custom.css
@@ -45,6 +45,7 @@ position relative .logo,
 }
 position relative .hero-background,
 #hero .hero-background {
+  background: rgba(10,113,180,0.4);
   position: absolute;
   width: 100%;
   height: 750px;
