--- a/css/custom.styl
+++ b/css/custom.styl
@@ -32,8 +32,16 @@ nav
 	text-align left
 	z-index 256
   position relative
+		
 
 //custom
+.language
+	color white
+	&:hover
+		background none !important
+		color white !important
+		text-decoration underline !important
+
 #hero
 	hero-height = 750px
 	text-shadow: 0 1px 1px rgba(0, 0, 0, 0.7);
