--- a/css/custom.styl
+++ b/css/custom.styl
@@ -27,14 +27,13 @@ h2
 	font-size 33px
 	font-weight bold
 
-nav
+nav {
 	margin-top 1em
 	text-align left
 	z-index 256
   position relative
-		
-
-//custom
+}
+  
 .language
 	color white
 	&:hover
@@ -58,7 +57,6 @@ nav
 	background-size cover
 	background-position center
 	margin 0
-	padding-hero = 0px
 	.logo
 		// margin-top 1em
 		position relative
@@ -82,13 +80,11 @@ nav
 		font-weight 300
 	h1
 		margin 0 auto
-		padding .3em 0 0 padding-hero
-		// text-transform uppercase
-		// font-weight 800
+		padding .3em 0 0 0
 		font-size 50px
 	h3
 		line-height: 1.3em;
-		padding-left padding-hero
+		padding-left 0
 		margin-top 1.2em
 		margin-bottom .5em
 	label
@@ -109,7 +105,7 @@ ul, li
 	padding 2em 0
 
 #hero .container #mc_embed_signup
-	padding-left: padding-hero;
+	padding-left: 0;
 
 .mc-field-group
 	float left
